<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<packaging>maven-plugin</packaging>
	<groupId>is.rebbi</groupId>
	<artifactId>vermilingua-maven-plugin</artifactId>
	<version>1.0.5-SNAPSHOT</version>

	<name>vermilingua-maven-plugin</name>
	<description>A pure Maven plugin for building WebObjects and Project Wonder
		applications and frameworks.</description>
	<url>https://github.com/undur/vermilingua-maven-plugin</url>

	<organization>
		<name>Godur kodi</name>
		<url>https://www.godurkodi.is/</url>
	</organization>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>hugith</id>
			<name>Hugi Thordarson</name>
			<email>hugi@godurkodi.is</email>
			<organization>Godur kodi</organization>
			<timezone>UTC</timezone>
		</developer>
		<developer>
			<id>paulh</id>
			<name>Paul Hoadley</name>
			<email>paulh@logicsquad.net</email>
			<organization>Logic Squad</organization>
			<timezone>Australia/Adelaide</timezone>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git://github.com/undur/vermilingua-maven-plugin.git</connection>
		<developerConnection>
			scm:git:ssh://github.com:undur/vermilingua-maven-plugin.git</developerConnection>
		<url>https://github.com/undur/vermilingua-maven-plugin/tree/master</url>
	</scm>

	<distributionManagement>
		<snapshotRepository>
			<id>central</id>
			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>central</id>
			<url>
				https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<properties>
		<maven.compiler.release>21</maven.compiler.release>
	</properties>

	<prerequisites>
		<maven>3.9.0</maven>
	</prerequisites>

	<profiles>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.3.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.11.3</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.2.8</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-plugin-plugin</artifactId>
					<version>3.15.1</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<!--
			<plugin>
				<groupId>com.soebes.itf.jupiter.extension</groupId>
				<artifactId>itf-maven-plugin</artifactId>
				<version>0.11.0</version>
				<executions>
					<execution>
						<id>installing</id>
						<phase>pre-integration-test</phase>
						<goals>
							<goal>install</goal>
							<goal>resources-its</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<systemProperties>
						<maven.version>${maven.version}</maven.version>
						<maven.home>${maven.home}</maven.home>
					</systemProperties>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.4</version>
			</plugin>
			<plugin>
				<groupId>org.sonatype.central</groupId>
				<artifactId>central-publishing-maven-plugin</artifactId>
				<version>0.8.0</version>
				<extensions>true</extensions>
				<configuration>
					<publishingServerId>central</publishingServerId>
				</configuration>
			</plugin>
		</plugins>

		<testResources>
			<testResource>
				<directory>src/test/resources-its</directory>
				<filtering>true</filtering>
			</testResource>
			<testResource>
				<directory>src/test/resources</directory>
			</testResource>
		</testResources>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.apache.maven.plugin-tools</groupId>
			<artifactId>maven-plugin-annotations</artifactId>
			<version>3.15.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-core</artifactId>
			<version>3.9.11</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.17</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.13.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.soebes.itf.jupiter.extension</groupId>
			<artifactId>itf-jupiter-extension</artifactId>
			<version>0.13.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.soebes.itf.jupiter.extension</groupId>
			<artifactId>itf-assertj</artifactId>
			<version>0.13.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>